[package]
name = "ja3"
version = "0.1.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
md5 = "0.7.0"
pcap = "0.7.0"
pnet = "0.25.0"
tls-parser = "0.9.2"
