[package]
name = "ja3"
version = "0.3.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"
description = "JA3 hash library in Rust"
homepage = "https://github.com/jabedude/ja3-rs/"
docs = "https://docs.rs/ja3"
repository = "https://github.com/jabedude/ja3-rs/"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [
    "*.pcap",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
md5 = "0.7.0"
pcap = "0.7.0"
pnet = "0.25.0"
tls-parser = "0.9.2"

[dev-dependencies]
pretty_assertions = "0.4.0"
env_logger = "0.7.1"
