[package]
name = "ja3"
version = "0.5.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"
description = "JA3 hash library in Rust"
keywords = ["ja3", "ssl", "tls", "networking", "network-analysis"]
homepage = "https://github.com/jabedude/ja3-rs/"
documentation = "https://docs.rs/ja3"
repository = "https://github.com/jabedude/ja3-rs/"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [
    "*.pcap",
]

[features]
live-capture = ["pcap"]

[dependencies]
failure = "0.1.7"
lazy_static = "1.4.0"
log = "0.4.8"
md5 = "0.7.0"
pcap = { version = "0.7.0", optional = true }
pcap-parser = "0.9.2"
pnet = "0.28.0"
tls-parser = "0.9.2"

[dev-dependencies]
pretty_assertions = "0.4.0"
env_logger = "0.7.1"
nix = "0.17.0"
rusty-fork = "0.2.2"

[[example]]
name = "stream"
required-features = ["live-capture"]
